@@ -4,7 +4,9 @@ AM_CFLAGS = $(DIX_CFLAGS) @SERVER_DEFINES@ @LOADER_DEFINES@
 
 INCLUDES = -I$(top_srcdir)/hw/xfree86/os-support
 
+if XORG
 sdk_HEADERS = dbestruct.h
+endif
 
 libdbe_la_SOURCES = \
         dbe.c \
